version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandNode.rst.txt
.. vale off



:class:`CommandNode`
====================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNode(iNode: Ansys.Common.Interop.FEParsePlugin_ANSYS.INode)

   Bases: :py:obj:`object`


   
   Represents a node associated to a NBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandNode

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Id`
            - Gets the node number.
          * - :py:attr:`~Location`
            - Gets the coordinates.
          * - :py:attr:`~Rotation`
            - Gets the rotation angles.







Property detail
---------------
.. py:property:: Id
   :type: Optional[int]


   
   Gets the node number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[tuple[float]]


   
   Gets the coordinates.
















   ..
       !! processed by numpydoc !!

.. py:property:: Rotation
   :type: Optional[tuple[float]]


   
   Gets the rotation angles.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on